<resources>
    <string name="login_failed">Login failed</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="app_name">Vaultionizer</string>
    <string name="all_host">Host</string>
    <string name="all_password">Password</string>
    <string name="all_example_url">For example: foobar.com</string>
    <string name="all_next_step">Next step</string>
    <string name="all_user">User</string>
    <string name="all_user_hint">For example donald@trump.shit or donald.trump</string>
    <string name="all_learn_more">Learn more</string>
    <string name="all_continue">Continue</string>
    <string name="all_finish">Finish</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_confirm">Confirm</string>
    <string name="all_unexpected_error">An unexpected error occurred!</string>
    <string name="login_header">Login</string>
    <string name="login_login">Login</string>
    <string name="login_login_progress">logging in</string>
    <string name="login_error_invalid_credentials"></string>
    <string name="username_error_length">The username is too short!</string>
    <string name="register_step_user_header">How shall we remember you?</string>
    <string name="register_step_host_header">On which host is your Vaultionizer instance installed?</string>
    <string name="register_step_host_loading">Checking host</string>
    <string name="register_step_auth_key_header">Almost done!<br /> Please provide proof that you are allowed to register on the specified instance.</string>
    <string name="register_step_auth_key_auth_key">Auth key</string>
    <string name="register_step_auth_key_auth_key_hint">You can obtain this key from the server owner.</string>
    <string name="register_step_auth_key_finish">Finish registration</string>
    <string name="register_step_auth_key_finish_progress">Creating account</string>
    <string name="register_error_username_taken">Username is already in use!</string>
    <string name="signup_divider">Or</string>
    <string name="signup_create_account">Create account</string>
    <string name="host_error_syntax">Please specify host with format &lt;host&gt;:&lt;port&gt;</string>
    <string name="host_error_code">Host responded with error code %1$d</string>
    <string name="text_file_viewer_error">Error while loading data.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_space_encryption_spinner_label">Encryption</string>
    <string name="create_space_label_general">General</string>
    <string name="create_space_name">Name</string>
    <string name="create_space_shared_vault">Shared vault</string>
    <string name="create_space_create">Create space</string>
    <string name="create_space_name_error">Space name be at least 4 characters long</string>
    <string name="create_space_progress">Creating space</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_description">Manage App settings</string>
    <string name="menu_keys">Keys</string>
    <string name="menu_keys_description">Create and delete cryptographic keys</string>
    <string name="menu_section_vaults">Your spaces</string>
    <string name="file_viewer_create_folder_title">What would you like to call the folder?</string>
    <string name="file_viewer_request_key_title">This Space is missing a valid cryptographical key!</string>
    <string name="file_viewer_request_key_message">In order to store your files in a secure manner, Vaultionizer requires a cryptographical key for every space. If this message appears after the startup, please choose to generate a new key.</string>
    <string name="file_viewer_request_key_positive">Generate Key</string>
    <string name="file_viewer_request_key_negative">Import Key</string>
    <string name="file_viewer_offline">{gmo-cloud-off} Your device is offline.</string>
    <string name="file_viewer_replace_or_upload_dialog_title">Ups, this file is already here!</string>
    <string name="file_viewer_replace_or_upload_dialog_message">There is already a file with the same name in this folder. Do you want to keep both or replace the existing one?</string>
    <string name="file_viewer_replace_or_upload_dialog_positive">Keep both</string>
    <string name="file_viewer_replace_or_upload_dialog_negative">Replace</string>
    <string name="file_viewer_open_file_no_app_available_title">Sorry, we cannot open that.</string>
    <string name="file_viewer_open_file_no_app_available_message">There is no external app available to display that file. Please install an app from the PlayStore to view this file.</string>
    <string name="file_viewer_open_file_no_app_available_positive">Understood.</string>
    <string name="file_viewer_exchange_error_title">Something went wrong!</string>
    <string name="file_viewer_exchange_error_message">Error while processing file %s. We\'ll try again later, no worries.</string>
    <string name="file_viewer_exchange_error_positive">Understood.</string>
    <string name="file_viewer_file_options_delete_permanently">Delete permanently</string>
    <string name="file_viewer_file_options_delete_locally">Delete locally</string>
    <string name="file_viewer_file_options_open_in_different_app">Open in another app</string>
    <string name="delete_file_progress_title">Are you sure?</string>
    <string name="delete_file_progress_content">You won\'t be able to recover these files!</string>
    <string name="delete_file_progress_confirm">Yes, delete the files</string>
    <string name="delete_pair_content">You won\'t be able to recover the pair!</string>
    <string name="delete_pair_confirm">Yes, delete this entry</string>
    <string name="delete_only_category_content">You won\'t be able to recover the category!</string>
    <string name="delete_only_category_confirm">Yes, delete only this category.</string>
    <string name="delete_category_and_pairs_content">You won\'t be able to recover the category and child pairs!</string>
    <string name="delete_category_and_pairs_confirm">Yes, delete category and pairs.</string>
    <string name="file_status_text_template">%1$d file(s) are being processed.</string>
    <string name="file_status_single_text_template">One file is being processed.</string>
    <string name="file_status_no_task">No files are being processed.</string>
    <string name="pwd_validator_too_short">Password is too short!</string>
    <string name="pwd_validator_too_few_uppercase">Password must contain at least 2 upper case letters!</string>
    <string name="pwd_validator_too_few_special">Password must contain at least 3 special characters!</string>
    <string name="pwd_validator_too_few_digits">Password must contain at least 3 digits!</string>
    <string name="pwd_validator_no_whitespaces">Password must not contain whitespaces!</string>
    <string name="createPCLabel">Enter the personal container\'s name</string>
    <string name="createPCInputText">Personal container name</string>
    <string name="createPCCheckboxText">Open personal container on create</string>
    <string name="createPCButtonText">Create PC!</string>
    <string name="create_pc_too_short_name">Personal container\'s name must be at least 4 characters long!</string>
    <string name="label_pc_category_name">Enter new category name</string>
    <string name="edit_pc_category_name">Category name</string>
    <string name="button_pc_create_category_name">Create category!</string>
    <string name="button_pc_edit_category_name">Update category!</string>
    <string name="label_create_pc_pair_category">Select category:</string>
    <string name="label_create_pc_pair_key">Enter name:</string>
    <string name="label_create_pc_pair_value">Enter content:</string>
    <string name="input_create_pc_pair_key">Name</string>
    <string name="input_create_pc_pair_value">Content</string>
    <string name="button_create_pc_pair_create">Create pair!</string>
    <string name="space_management_title_category">Manage Vault</string>
    <string name="space_management_shared_title">Shared space</string>
    <string name="space_management_shared_summary_on">Space is shared. You can invite other users to share your files.</string>
    <string name="space_management_shared_summary_off">Space is private. No other users can see your space.</string>
    <string name="space_management_auth_key_show_title">Show auth key</string>
    <string name="space_management_auth_key_show_summary">Show the authentication key for inviting other users.</string>
    <string name="space_management_delete_space_title">Delete space</string>
    <string name="space_management_delete_space_summary">Kick all users, delete space and files/keys associated to it.</string>
    <string name="space_management_category_manage_space">Manage space</string>
    <string name="space_management_write_access_title">Write access</string>
    <string name="space_management_write_access_summary_on">Users have write access.</string>
    <string name="space_management_write_access_summary_off">Users do not have write access.</string>
    <string name="space_management_auth_key_switch_title">Allow users to invite</string>
    <string name="space_management_auth_key_switch_summary_on">Users can invite new users.</string>
    <string name="space_management_auth_key_switch_summary_off">Users cannot invite new users.</string>
    <string name="space_management_generate_auth_key_title">Regenerate auth key</string>
    <string name="space_management_generate_auth_key_summary">Invalidate old auth key and generate a new one.</string>
    <string name="space_management_kick_all_users_title">Kick all users</string>
    <string name="space_management_kick_all_users_summary">Remove all users except yourself from the space.</string>
    <string name="space_management_write_access_switch_summary_off">You do not have write access.</string>
    <string name="space_management_write_access_switch_summary_on">You have write access.</string>
    <string name="space_management_write_access_switch_title">Write access</string>
    <string name="space_management_quit_space_title">Quit space</string>
    <string name="space_management_quit_space_summary">Quit the space, delete all local copies and associated keys.</string>
    <string name="logout_title">Logout</string>
    <string name="logout_summary">Log out of the current user.</string>
    <string name="delete_local_files_btn_title">Delete all local files</string>
    <string name="delete_local_files_summary">Delete all local copies of files.</string>
    <string name="delete_user_btn_title">Delete user</string>
    <string name="delete_user_summary">Delete your user</string>
    <string name="quit_spaces_title">Quit all spaces</string>
    <string name="quit_spaces_summary">Quit all spaces and delete all associated files/keys.</string>
    <string name="category_manage_account">Manage account</string>
    <string name="category_visual_settings">Visual settings</string>
    <string name="theme_selector_title">Visual theme</string>
    <string name="theme_selector_summary">Select the color theme for the application.</string>
    <string name="users_have_write_access_checkbox_text">Users have write access</string>
    <string name="users_can_invite_other_users_checkbox_text">Users can invite other users</string>
</resources>