<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/space_management_title_category">

        <SwitchPreference
            android:defaultValue="false"
            android:key="sharedSpaceSwitch"
            android:title="@string/space_management_shared_title"
            android:summaryOn="@string/space_management_shared_summary_on"
            android:summaryOff="@string/space_management_shared_summary_off"/>

        <Preference
            android:title="@string/space_management_auth_key_show_title"
            android:key="showAuthKeyBtn"
            android:summary="@string/space_management_auth_key_show_summary"
            />

        <Preference
            android:title="@string/space_management_delete_space_title"
            android:key="deleteSpaceBtn"
            android:summary="@string/space_management_delete_space_summary"
            />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/space_management_category_manage_space" android:dependency="sharedSpaceSwitch">

        <SwitchPreference
            android:defaultValue="false"
            android:key="writeAccessSwitch"
            android:title="@string/space_management_write_access_title"
            android:summaryOn="@string/space_management_write_access_summary_on"
            android:summaryOff="@string/space_management_write_access_summary_off"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="authKeySwitch"
            android:title="@string/space_management_auth_key_switch_title"
            android:summaryOn="@string/space_management_auth_key_switch_summary_on"
            android:summaryOff="@string/space_management_auth_key_switch_summary_off"/>

        <Preference
            android:title="@string/space_management_generate_auth_key_title"
            android:key="generateAuthKeyBtn"
            android:summary="@string/space_management_generate_auth_key_summary"
            />

        <Preference
            android:title="@string/space_management_kick_all_users_title"
            android:key="kickUsersBtn"
            android:summary="@string/space_management_kick_all_users_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>