<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.pc.EditPCPair">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_pc_pair_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_create_pc_pair_key"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_pc_pair_category_spinner" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_pc_pair_key_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/input_create_pc_pair_key"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_pc_pair_label2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pc_pair_key_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/edit_pc_pair_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_create_pc_pair_value"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_pc_pair_key_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_pc_pair_value_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/input_create_pc_pair_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_pc_pair_value_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pc_pair_value_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/edit_pc_pair_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_create_pc_pair_category"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/edit_pc_pair_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_pc_pair_label" />

        <Button
            android:id="@+id/edit_pc_pair_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:enabled="false"
            android:text="@string/button_create_pc_pair_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_pc_pair_value_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>